<resources>
    <string name="app_name">CursoAndroid</string>
    <string name="btnVista">Vista</string>
    <string name="encabezado">Bienvenido</string>
    <string name="title_activity_login">Sign in</string>
    <string name="mostrarPass">Mostrar</string>
    <string name="enviar">Enviar</string>
    <string name="nombre">Nombre…</string>
    <string name="param">nombre</string>
    <string name="contacto_menu_opsiones">Fragment</string>
    <string name="sucursales_menu_opsiones">Spinner</string>
    <string name="menu_contexto_nombre">Nombre</string>
    <string name="menu_contexto_telefono">Teléfono</string>
    <string name="menu_appbar_tocar">tocar</string>
    <string name="menu_popup_detalle">Detalles</string>
    <string name="menu_popup_delete">Eliminar</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="rbdesactivado">Desactivado</string>
    <string name="rbactivado">Activado</string>
    <string name="title_activity_prueba">Prueba</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="trespnts">⋮</string>
    <string name="sqlite">SQLite</string>
    <string name="title_activity_web_service_mysql">WebServiceMysql</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="ws_mysql_menu">Eliga una opsion del menú</string>
    <string name="buscarFolio">Buscar</string>
    <string name="title_activity_maps">Map</string>
    <string name="mi_mensaje">Hola <b>mundo</b>, me llamo <b>Pepe</b></string>
    <string name="bttext_next_instruction">Finalizar</string> <!-- pone en negritas <b> -->
    <string name="tvtext_description_instruction">Eneyda es una exelente persona. \nMuy inteligente</string>
    <string name="menu_popup_edit">Editar</string>
    <string name="ic_cp_contacts">Contactos</string>
    <string name="title_fmt_cp_contacts">Content Provider Contacts</string>
    <string name="txt_btn_fmt_cp_contacts">Registro de llamadas</string>
    <string name="tv_hint_cp_contacts">Log de llamadas</string>
    <string name="bt_save_register_CP">Guardar</string>
    <string name="enter_weight_kg_cp">Ingrese su peso en kg.</string>
    <string name="txt_date_register_update_cp">Fecha de registro</string>
    <string name="bt_update_weight_cp">Actualizar</string>
    <string name="bt_delete_weight_all_cp">Eliminar</string>
    <string name="tv_list_contact_cp">Lista de contactos</string>
    <string name="bt_view_contacts_cp">Ver contactos</string>
    <string name="tv_rx_publicaciones_y_comentarios">Publicaciones y comentarios.</string>
    <string name="menu_appbar_save">Gusrdar</string>
    <string name="menu_appbar_delete">Eliminar</string>
    <string name="menu_appbar_update">update</string>

    <string-array name="nombres">
        <item>Ángel</item>
        <item>Manuel</item>
    </string-array> <!-- pone un salto de linea \n -->
</resources>
